<resources>
    <string name="app_name">UDG Biblioteca</string>
    <string name="server_url" translatable="false">http://albertocaro.000webhostapp.com/</string>
    <!--string name="server_url" translatable="false">http://192.168.105.2/albertocaro/</string-->
    <string name="navigation_drawer_open">Abrir cajón de navegación</string>
    <string name="navigation_drawer_close">Cerrar cajón de navegación</string>
    <string name="action_settings">Configuración</string>
    <string name="nav_main">Principal</string>
    <string name="nav_books">Libros</string>
    <string name="nav_audiobooks">Audio libros</string>
    <string name="nav_bookmarks">Marcadores</string>
    <string name="nav_loans">Prestamos</string>
    <string name="nav_fines">Multas</string>
    <string name="nav_info">Información</string>
    <string name="login">Iniciar sesión</string>
    <string name="logout">Cerrar sesión</string>
    <string name="nav_help">Ayuda</string>
    <string name="nav_about">Acerca de</string>
    <string name="login_user">Código</string>
    <string name="login_pass">Contraseña</string>
    <string name="login_button">Ingresar</string>
    <string name="login_invalid">Credenciales incorrectas</string>
    <string name="login_blank_user">El usuario no puede quedar vacío</string>
    <string name="login_blank_pass">La contraseña no puede quedar vacía</string>
    <string name="detail_ISBN" translatable="false">ISBN</string>
    <string name="detail_autor" translatable="false">Autor</string>
    <string name="detail_estatus">Estatus de prestamo</string>
    <string name="detail_edition">Edición</string>
    <string name="detail_copies_avaliable">Número de ejemplares disponibles</string>
    <string name="detail_classification">Clasificación</string>
    <string name="detail_copies">Número total de ejemplares</string>
    <string name="search">Buscar</string>
    <string name="user_name">Nombre completo</string>
    <string name="user_mail">Correo eléctronico</string>
    <string name="user_career">Carrera</string>
    <string name="university">Universidad</string>
    <string name="library">Consulta de biblioteca</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="details">Detalles</string>
    <string name="fines_title">Título</string>
    <string name="fines_money">Monto</string>
    <string name="empty_booklist">No hay libros registrados.</string>
    <string name="empty_bookmarklist">No has agregado ningún libro a marcadores.</string>
    <string name="empty_fineslist">Deudas saldadas, sigue tu camino viajero/a.</string>
    <string name="empty_loanlist">No tienes libros en tu posesión.</string>
    <string name="title_book_list">Books</string>
    <string name="title_book_detail">Book Detail</string>
    <string name="update_list">Actualizando lista…</string>
    <string name="unavalible_internet">No hay conexión a internet.</string>
    <string name="unavalible_connection">No se ha podido conectar al servidor</string>
    <string name="added_bookmark">Se ha añadió el libro a marcadores.</string>
    <string name="deleted_bookmark">Se ha eliminado el libro de marcadores.</string>
    <string name="failed_bookmark_operation">Operación fallida.</string>
    <string name="unexpected_response">Respuesta inesperada: </string>
    <string name="settings">Configuración</string>
    <string name="settings_theme">Tema</string>
    <string name="settings_theme_sub">Elegir el tema de la aplicación.</string>
    <string name="settings_events">Añadir al calendario</string>
    <string name="settings_events_sub">Añadir eventos y recordatorios.</string>
    <string name="settings_notification_time">Tiempo del recordatorio</string>
    <string name="settings_notification_time_sub">Tiempo de aviso de notificación antes del evento.</string>
    <string name="event_message">Devolución del libro para no generar multa.</string>
    <string name="dynadev" translatable="false">DynaDevs</string>
    <string name="about_description">
        Aplicación desarrollada en el Centro Universitario de los Valles por alumnos de la carrera
        de Tecnologías de la Información en conjunto con la Coordinación de Tecnologías para el
        Aprendizaje, para las bibliotecas de la red universitaria de la Universidad de Guadalajara.
    </string>
    <string name="about_developed_by">Desarrollado en CUValles</string>
    <string name="about_version">Versión de la aplicación: </string>
    <string name="subject">Asunto</string>
    <string name="subject_error">El asunto no puede quedar vacío.</string>
    <string name="message">Mensaje</string>
    <string name="message_error">El mensaje no puede quedar vacío.</string>
    <string name="message_send">Enviado satisfactoriamente.</string>
    <string name="send">Enviar</string>
    <string name="need_internet">Necesita internet para solicitar ayuda.</string>
    <string name="user_info">Información del usuario:</string>
    <string name="udg" translatable="false">UDG</string>
    <string name="universidad_udg" translatable="false">Universidad de Guadalajara</string>
    <string name="not_logged">No has iniciado sesión</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="logout_question">¿Está seguro de querer cerrar la sesión?</string>
    <string name="out">Salir</string>
    <string name="out_message">¿Está seguro de querer salir?</string>
    <string name="logout_message">¿De verdad desea cerrar sesión?</string>
    <string name="loggin_in">Iniciando sesión…</string>
    <string name="sending_message">Enviando mensaje…</string>
    <string name="book_details_title">Información del libro</string>
    <string name="book_copies_title">Información de ejemplares</string>
    <string name="not_copies_availiable">No hay ejemplares disponibles.</string>
    <string name="not_copies">No hay ejemplares registrados.</string>
    <string-array name="theme_options">
        <item>Institucional (predeterminado)</item>
        <item>Rojo</item>
        <item>Púrpura</item>
        <item>Verde</item>
        <item>Android</item>
    </string-array>
    <string-array name="notification_options">
        <item>Sí</item>
        <item>No</item>
    </string-array>
    <string-array name="time_options">
        <item>5 minutos</item>
        <item>30 minutos</item>
        <item>12 horas</item>
        <item>1 día</item>
    </string-array>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
</resources>
