<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_principal"
            android:title="@string/nav_main" />
        <item
            android:id="@+id/nav_books"
            android:icon="@drawable/ic_libros"
            android:title="@string/nav_books" />
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/ic_prestamos"
            android:title="@string/nav_bookmarks" />
        <item
            android:id="@+id/nav_loans"
            android:icon="@drawable/ic_prestamos"
            android:title="@string/nav_loans" />
        <item
            android:id="@+id/nav_fines"
            android:icon="@drawable/ic_multas"
            android:title="@string/nav_fines" />
    </group>

    <item android:title="@string/nav_info">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_ayuda"
                android:title="@string/nav_help" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_acercade"
                android:title="@string/nav_about" />
        </menu>
    </item>

</menu>
